--- a/src/components/vinomenu.scss
+++ b/src/components/vinomenu.scss
@@ -19,23 +19,64 @@
   .vinomenu-title {
     position: absolute;
     top: 40vh;
-    right: 20vw;
-    width: 30vw;
+    right: -90vw;
+    width: 130vw;
     height: 10vh;
     //border: 1px solid red;
     font-size: 4rem;
     font-family: "Work Sans", sans-serif;
 
     font-weight: 100;
+    display: flex;
+    z-index: 200;
+
+    .item-text-container {
+      opacity: 0.15;
+
+      display: flex;
+      flex-direction: column;
+      z-index: 200;
+
+      .title-small-number {
+        font-size: 1rem;
+        text-align: right;
+        margin-bottom: 3vh;
+        letter-spacing: 0.2vw;
+      }
+
+      .item-title {
+        width: 30vw;
+        text-align: right;
+
+        font-size: 2.5rem;
+        letter-spacing: 0.3vw;
+        z-index: 999;
+      }
+      .item-text {
+        margin-top: 4vh;
+        text-align: right;
+        font-style: italic;
+        font-weight: 400;
+        color: rgba(255, 255, 255, 0.4);
+        letter-spacing: 0.15vw;
+
+        font-size: 1.2rem;
+        z-index: 999;
+      }
+    }
+
+    .chosen-text {
+      opacity: 1;
+    }
   }
 
   .menu-items-container {
     width: 10vw;
-    height: 50vh;
+    height: 200vh;
 
     position: absolute;
-    top: 20vh;
-    left: 20vw;
+    top: 0vh;
+    left: -20vw;
 
     transform-origin: bottom left;
     transform: rotate(35deg);
@@ -43,16 +84,49 @@
     display: flex;
     flex-direction: column;
 
+    hr {
+      width: 200vw;
+      margin-left: -90vw;
+      border: 2px dashed;
+      border-color: rgba(255, 255, 255, 0.15);
+      border-style: none none dashed;
+    }
+
+    .vino-anim {
+    }
+
     .menu-item {
       overflow: hidden;
-      opacity: 0.15;
+      //opacity: 0.15;
       width: 10vw;
       height: 200px;
       border: 1px solid white;
       display: grid;
       place-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+
       border-radius: 0 20% 0 20%;
+
+      .vinomenu-pic-number {
+        position: absolute;
+        width: 10vh;
+        height: 10vh;
+
+        transform: rotate(-35deg);
+
+        color: white;
+        z-index: 1005;
+        font-size: 1.5rem;
+        display: grid;
+        place-items: center;
+        transition: all 0.3s ease;
+        opacity: 1;
+      }
+
+      .hide-pic-number {
+        opacity: 0;
+      }
 
       img {
         height: 300px;
@@ -65,7 +139,18 @@
         //object-fit: fit;
         transform: rotate(-35deg) translateY(-140px);
         transform-origin: center;
+        z-index: 2;
       }
+    }
+
+    #vino-upper-gradient {
+      width: 200vw;
+      margin-left: -80vw;
+      margin-top: -100vh;
+      height: 70vh;
+      background: linear-gradient(0deg, rgb(0, 0, 0), rgb(40, 81, 87));
+
+      z-index: -2;
     }
   }
 
@@ -83,13 +168,17 @@
       margin: 3px 0px 3px 3px;
       width: 10vh;
       height: auto;
+      display: grid;
+      place-items: center;
       border: 1px solid rgba(255, 255, 255, 0.192);
       background-color: rgba(255, 255, 255, 0);
       border-radius: 0% 20% 20% 20%;
+      transition: all 0.2s ease;
     }
 
     .lowbar-button:hover {
       background-color: rgba(255, 255, 255, 0.3);
+      transform: scale(1.2);
     }
   }
 }
