--- a/src/components/vinomenu.scss
+++ b/src/components/vinomenu.scss
@@ -90,6 +90,7 @@
 
       .chosen-text {
         opacity: 1;
+        text-shadow: 0px 0px 9px rgba(255, 255, 255, 0.459);
       }
     }
   }
@@ -212,6 +213,110 @@
 
       padding-bottom: 3vh;
       font-size: 2rem;
+    }
+
+    .chosen-low-button {
+      padding-bottom: 3vh;
+    }
+  }
+}
+
+//
+//
+//
+//
+
+//
+//MOBILE
+//
+
+//
+//
+//
+@media screen and (orientation: portrait) {
+  .vinomenu-container {
+    .gradient-container {
+      height: 100vh;
+      width: 100vw;
+      top: 0;
+      left: 0;
+      #vino-upper-gradient {
+        transform: rotate(0deg);
+      }
+    }
+
+    .title-container {
+      .vinomenu-title {
+        top: 5vh;
+        right: 0vw;
+        width: 100vw;
+        height: 60vh;
+
+        .item-text-container {
+          .title-small-number {
+          }
+
+          .item-title {
+            text-align: left;
+          }
+          .item-text {
+            text-align: left;
+          }
+        }
+        .item-text-container:first-child {
+          padding-left: 8vw;
+        }
+
+        .chosen-text {
+        }
+      }
+    }
+
+    .menu-items-container {
+      left: -195vw;
+      top: 7vh;
+      width: 200px;
+      hr {
+      }
+
+      .vino-anim {
+      }
+
+      .number-pic-container {
+        .item-number {
+        }
+
+        .menu-item {
+          width: 200px;
+
+          .vinomenu-pic-number {
+          }
+
+          .hide-pic-number {
+          }
+
+          img {
+          }
+          video {
+          }
+        }
+      }
+    }
+
+    .lowbar-buttons-container {
+      left: 5vw;
+
+      width: 90vw;
+      .lowbar-button {
+      }
+
+      .lowbar-button:hover {
+      }
+
+      .chosen-low-button {
+        padding-bottom: 0vh;
+        background-color: rgba(255, 255, 255, 0.3);
+      }
     }
   }
 }
